# ZabbixToJira

./: LICENSE  README.md  pyproject.toml  requirements.txt  zabbix-jira.db  zabbix_to_jira.py  ztj_config_default.py
test/: __init__.py  entry.txt  remove_from_sqlite.py  test_zabbix_to_jira.py  ztj_body_parser.py
